# simstpy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  tests.yml
notebooks/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb
notebooks/.ipynb_checkpoints/: 01-checkpoint.ipynb  02-checkpoint.ipynb  03-checkpoint.ipynb
simstpy/: __init__.py  fit_distribution.py  plotting.py  rna.py  simulate.py  utils.py
simstpy/_rna/: __init__.py  plotting.py  simulate.py
simstpy/atac/: __init__.py  simulate.py  utils.py
simstpy/data/: human_DLPFC_151510.csv  human_DLPFC_151669.csv  human_DLPFC_151676.csv
simstpy/rna/: __init__.py  fit.py  plot.py  plotting.py  simulate.py  simulate_svgs.py  utils.py
simstpy/spatial/: __init__.py  get_patterns.py  io.py  plot.py  utils.py
simstpy/spatial/patterns/: breast_tumor.csv  human_DLPFC_151507.csv  human_DLPFC_151508.csv  human_DLPFC_151509.csv  human_DLPFC_151670.csv  human_DLPFC_151671.csv  human_DLPFC_151672.csv  human_DLPFC_151673.csv  human_DLPFC_151674.csv  human_DLPFC_151675.csv  mouse_cerebellum.csv  mouse_coronal_slices.csv
tests/: test_data.py  test_fitting.py
