[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "simstpy"
version = "0.0.1"
description = "Simulating spatially-resolved omics data using python"
authors = [
    {name = "Zhijian Li", email = "lzj1769@gmail.com"}
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research"
]
requires-python = ">= 3.8"
dependencies = [
    "scikit-learn",
    "anndata",
    "numpy",
    "scipy",
    "scanpy",
    "squidpy",
    "pandas"
]

[project.urls]
Source = "https://github.com/lzj1769/simstpy"
Documentation = "https://simstpy.readthedocs.io/en/latest/"